--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.34.0",
+    "serve": "^12.0.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "node index.js",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
