--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ernestocanada.github.io/portfolio",
+  "homepage": "https://ernestocanada.github.io/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +18,7 @@
     "react-parallax-tilt": "^1.5.57",
     "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^2.0.0",
     "react-tsparticles": "^1.34.0",
     "serve": "^12.0.1",
     "styled-components": "^5.3.1",
